Fix bubble overflow-x and added external equation refs in bubble

--- a/qadil/css/iLaTeXen.css
+++ b/qadil/css/iLaTeXen.css
@@ -586,6 +586,10 @@ figcaption {
   border-color: transparent #fff;
 }
 
+.bubbleinnercontent {
+  overflow-x: auto;
+}
+
 .bubbleleft::before {
   right: 92%;
 }
